@@ -107,6 +107,8 @@ production.
 * (bug 31081) $wgEnotifUseJobQ causes many unnecessary jobs to be queued
 * (bug 30202) File names are now restricted on upload to 240 bytes, because of
   restrictions on some of the database fields.
+* Timezones are now recognised in user preferences when offset is different
+  due to DST
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
